# simple_genome_downloader

./: README.md  config.json  pyproject.toml  simple_genome_downloader.py
kbase/: auth.py  simple_client.py  workspace.py
